simulation-wasm/tests/snapshots/snapshot_tests__basic_melee_combat.snap
---
source: tests/snapshot_tests.rs
expression: data
---
{
  "description": "Fast initiative should dominate in mirror match",
  "median_win_rate": 90.0,
  "median_survivors": 1,
  "party_size": 1
}
