simulation-wasm/tests/snapshots/snapshot_tests__damage_vs_precision.snap
---
source: tests/snapshot_tests.rs
expression: data
---
{
  "description": "Precision (Monster) beats Damage (Player) in this setup",
  "median_win_rate": 100.0,
  "median_survivors": 1,
  "party_size": 1
}
